[gd_scene load_steps=4 format=3 uid="uid://cy6k3hxdbfybu"]

[ext_resource type="Script" path="res://UserInterface.gd" id="1_bflix"]
[ext_resource type="FontFile" uid="uid://b68h7u47aj2k2" path="res://assets/image/invaders_font.png" id="2_w0yp3"]

[sub_resource type="LabelSettings" id="LabelSettings_30k2a"]
line_spacing = 8.0
font = ExtResource("2_w0yp3")
font_color = Color(1, 1, 0, 1)

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_bflix")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_w0yp3")
text = "SPACE INVADERS 2023"
label_settings = SubResource("LabelSettings_30k2a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="LabelTimer" to="." method="_on_label_timer_timeout"]
